--- a/web study/CSS/ex06_공간분할태그.html
+++ b/web study/CSS/ex06_공간분할태그.html
@@ -40,11 +40,11 @@
             item2
         </div>
     </div>
-    <p></p>
-    <p></p>
-    <p></p>
-    <span></span>
-    <span></span>
-    <span></span>
+    <p>이건 p</p>
+    <p>이건 p</p>
+    <p>이건 p</p>
+    <span>이건 span</span>
+    <span>이건 span</span>
+    <span>이건 span</span>
 </body>
 </html>
