--- a/web study/CSS/ex07_border 기초.html
+++ b/web study/CSS/ex07_border 기초.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,22 +14,46 @@
 
         /* 한번에 width, color, style을 지정할 수 있음 */
         /* border: width style color; */
-              div {
+        div {
             width: 200px;
             height: 100px;
-            background-color:darkseagreen ;
+            background-color: darkseagreen;
         }
 
-        #solid {border: 10px solid green;}
-        #dotted {border: 10px dotted green;}
-        #dashed {border: 10px dashed green;}
-        #double {border: 10px double green;}
-        #groove {border: 10px groove green;}
-        #ridge {border: 10px ridge green;}
-        #inset {border: 10px inset green;}
-        #outset {border: 10px outset green;}
+        #solid {
+            border: 10px solid green;
+        }
+
+        #dotted {
+            border: 10px dotted green;
+        }
+
+        #dashed {
+            border: 10px dashed green;
+        }
+
+        #double {
+            border: 10px double green;
+        }
+
+        #groove {
+            border: 10px groove green;
+        }
+
+        #ridge {
+            border: 10px ridge green;
+        }
+
+        #inset {
+            border: 10px inset green;
+        }
+
+        #outset {
+            border: 10px outset green;
+        }
     </style>
 </head>
+
 <body>
     <div id="solid">solid</div>
     <br>
@@ -46,4 +71,5 @@
     <br>
     <div id="outset">outset</div>
 </body>
+
 </html>
