--- a/web study/JS/ex06_형변환.html
+++ b/web study/JS/ex06_형변환.html
@@ -12,6 +12,7 @@
         // 문자열 > 숫자 변환
         console.log(`변환 전${age}`);
         console.log('변환 후' + parseInt(age)); // 문자열을 숫자로 변환하여 더하기
+        // number() : 숫자로 변환 (정수, 실수 모두 가능)
         // parseInt(), parseFloat() 사용 가능
         // parseInt() : 정수로 변환
         // parseFloat() : 실수로 변환
