--- a/web study/JS/ex19_DOM내용조회.html
+++ b/web study/JS/ex19_DOM내용조회.html
@@ -41,7 +41,7 @@
 
         // msg의 content를 변경
         msg.innerHTML = "내용 변경완료";
-        msg.innerHTML = "내용 추가완료";
+        msg.innerHTML += "내용 추가완료";
         
         
     </script>
